# Automation1

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt  run_temp.py  setup.cfg
pyautomation/: __init__.py  controller.py  modules.py  utils.py
