[metadata]
name = pyautomation
version = 0.1.0
author = Christofanis Skordas, Stella Chariton
author_email = skordasc@uchicago.edu, stellachariton@uchicago.edu
license_file = LICENSE
description = A python library to interface with the Aerotech automation1 controller
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GSECARS/PyAutomation/
project_urls =
    Bug Tracker = https://github.com/GSECARS/PyAutomation/issues
classifiers =
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =.
packages = find:
zip_safe = False
install_requires =
python_requires = >=3.9
